# demo-video

./: .gitignore  CMakeLists.txt
dependence32/ffmpeg/include/libavutil/: ffversion.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h  glad_wgl.h
src/glad/src/: glad.c  glad_wgl.c
src/show-information/: CMakeLists.txt  main.cpp
src/simple-app/: CMakeLists.txt  main.cpp
src/yuv-app/: CMakeLists.txt  main.cpp
